Add Chakra UI and peer dependencies

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^11.0.17"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
