--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/stepper": "^2.3.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.9.0",
     "framer-motion": "^11.0.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
