--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.9.0",
+    "@supabase/supabase-js": "^2.50.0",
     "framer-motion": "^11.0.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
