--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
+# Dependencies
 node_modules
+
+# Vite / Build artifacts
+dist
+.vite/
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Local environment variables
+.env
+.env.local
+.env.*.local
+
+# IDE and system files
+.DS_Store
+.idea/
+.vscode/
