--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "@testing-library/user-event": "^14.6.1",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2"
+  },
+  "dependencies": {
+    "uuid": "^11.1.0"
   }
 }
