faster backend deploy

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,6 +2,18 @@ services:
   - type: web
     name: fairplay-nil-backend
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn app.main:app --host 0.0.0.0 --port 10000"
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port 10000 --workers 4
     plan: free
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.0
+    autoDeploy: true
+    healthCheckPath: /
+    buildFilter:
+      paths:
+        - backend/**
+      ignoredPaths:
+        - backend/**/*.pyc
+        - backend/__pycache__/**
+        - backend/venv/**
