--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,11 @@
-fastapi==0.115.12
-uvicorn[standard]==0.34.3
-pydantic[email]==2.11.5
-python-dotenv==1.1.0
-supabase==2.15.2
-httpx==0.28.1
-starlette==0.46.2
-typing_extensions==4.14.0
+fastapi==0.104.1
+uvicorn==0.24.0
+python-dotenv==1.0.0
+supabase==1.0.3
+pydantic==2.4.2
+pydantic[email]==2.4.2
+python-multipart==0.0.6
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+requests==2.31.0
+httpx==0.25.0
