--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,7 @@ python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 requests==2.31.0
-httpx==0.23.3
+httpx>=0.24.0,<0.25.0
 starlette==0.27.0
 typing-extensions==4.8.0
 anyio==3.7.1
