--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,11 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 python-dotenv==1.0.0
-supabase==2.3.0
+supabase==1.2.0
+gotrue==1.1.0
+postgrest==0.13.0
+realtime==1.0.0
+storage3==0.7.0
 pydantic==2.4.2
 pydantic[email]==2.4.2
 python-multipart==0.0.6
