--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,10 +2,10 @@ fastapi==0.104.1
 uvicorn==0.24.0
 python-dotenv==1.0.0
 supabase==1.2.0
-gotrue==1.1.0
-postgrest==0.13.0
-realtime==1.0.0
-storage3==0.7.0
+gotrue>=0.2.0,<1.0.0
+postgrest>=0.10.8,<0.12.0
+realtime>=0.1.0,<1.0.0
+storage3>=0.3.0,<0.8.0
 pydantic==2.4.2
 pydantic[email]==2.4.2
 python-multipart==0.0.6
