--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,7 @@ python-dotenv==1.0.0
 supabase==1.2.0
 gotrue>=0.2.0,<1.0.0
 postgrest>=0.10.8,<0.12.0
-realtime>=0.1.0,<1.0.0
+realtime==0.0.5
 storage3>=0.3.0,<0.8.0
 pydantic==2.4.2
 pydantic[email]==2.4.2
