--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,14 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 python-dotenv==1.0.0
-supabase==1.2.0
-gotrue>=0.2.0,<1.0.0
-postgrest>=0.10.8,<0.12.0
-realtime==0.0.5
-storage3>=0.3.0,<0.8.0
+supabase-py==0.0.2
 pydantic==2.4.2
 pydantic[email]==2.4.2
 python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 requests==2.31.0
-httpx>=0.24.0,<0.25.0
+httpx==0.23.3
 starlette==0.27.0
 typing-extensions==4.8.0
 anyio==3.7.1
