--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.95.2
 uvicorn==0.22.0
 python-dotenv==1.0.0
-supabase-py==0.0.2
+supabase==1.0.3
 pydantic==1.10.7
 python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
