--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 requests==2.28.2
 httpx==0.23.0
-starlette==0.26.1
+starlette>=0.27.0,<0.28.0
 typing-extensions==4.5.0
 anyio==3.6.2
 PyJWT==2.6.0
