--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
-    "@supabase/supabase-js": "^2.45.1",
+    "@supabase/supabase-js": "^2.21.0",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.19",
@@ -24,7 +24,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.25.1",
+    "react-router-dom": "^6.8.1",
+    "react-select": "^5.8.0",
     "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
