--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,17 +2,17 @@ fastapi==0.95.2
 uvicorn==0.22.0
 python-dotenv==1.0.0
 supabase==2.16.0
-pydantic==1.10.7
+pydantic>=1.10.7,<3.0.0
 python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 requests==2.28.2
 httpx>=0.26,<0.29
 starlette>=0.27.0,<0.28.0
-typing-extensions==4.5.0
-anyio==3.6.2
+typing-extensions>=4.14.0,<5.0.0
+anyio>=3.6.2,<5.0.0
 PyJWT==2.6.0
 email-validator==2.0.0.post2
 redis==4.5.4
-aioredis==2.0.1
+aioredis>=2.0.1,<3.0.0
 psutil==5.9.5
