--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,17 +15,22 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
+    "@nivo/core": "^0.99.0",
+    "@nivo/line": "^0.99.0",
+    "@nivo/pie": "^0.99.0",
     "@supabase/supabase-js": "^2.21.0",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.19",
     "lucide-react": "^0.525.0",
     "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.8.1",
     "react-select": "^5.8.0",
+    "recharts": "^3.0.2",
     "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
