feat: Add Playwright E2E testing infrastructure and local development setup
- Add comprehensive Playwright E2E testing system with CI/CD integration
- Create local development environment with automated setup scripts
- Update .cursor rules with testing patterns and deployment workflow
- Add GitHub Actions workflow for automated testing before deployment
- Include interactive debugging tools and test reporting
- Add environment validation and production-ready configuration
- Remove outdated To-do-before-bug-fixing.md
- Add LOCAL_DEVELOPMENT_GUIDE.md for local development workflow

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,14 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "validate:env": "node -e \"import('./src/config/environment.js').then(m => console.log('Environment config:', m.validateEnvironmentConfig()))\"",
+    "validate:env": "node -e \"import('./src/config/environment.js').then(m => { const result = m.validateEnvironmentConfig(); console.log('Environment validation:', result); process.exit(result.isValid ? 0 : 1); })\"",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:report": "playwright show-report",
+    "test:e2e:install": "playwright install",
+    "debug:playwright": "node scripts/debug-with-playwright.js",
     "deploy:staging": "npm run build:staging && npx vercel --prod",
     "deploy:production": "npm run build:production && npx vercel --prod"
   },
@@ -29,6 +36,7 @@
     "@nivo/core": "^0.99.0",
     "@nivo/line": "^0.99.0",
     "@nivo/pie": "^0.99.0",
+    "@playwright/test": "^1.54.1",
     "@sentry/react": "^9.43.0",
     "@sentry/tracing": "^7.120.4",
     "@supabase/supabase-js": "^2.21.0",
@@ -51,21 +59,21 @@
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
-    "@testing-library/jest-dom": "^6.6.4",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.0.3",
     "babel-jest": "^30.0.5",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.8",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^30.0.5",
-    "jest-environment-jsdom": "^30.0.5",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "vercel": "^44.6.4",
-    "vite": "^5.4.1"
+    "vite": "^4.4.5"
   }
 }
